Unchecked usage fixes